--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,3 +2,82 @@ body {
   background: #eee;
   font-family: "Nunito SemiBold";
 }
+
+#main {
+  padding: 0px;
+  box-sizing: border-box;
+  width: 60%;
+  height: 100%;
+}
+
+#main h1 {
+  color: #444;
+  text-align: center;
+}
+
+#book-list {
+  padding: 0;
+}
+
+#book-list li {
+  display: inline-block;
+  margin: 12px;
+  padding: 10px;
+  border-radius: 4px;
+  border: 1px solid #880E4F;
+  box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+  color: #880E4F;
+}
+
+form#add-book {
+  background: #FFF;
+  padding: 20px;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 400px;
+}
+
+form#add-book .field {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+form#add-book label {
+  text-align: right;
+  padding: 6px;
+}
+
+form#add-book select, form#add-book input {
+  margin: 4px;
+  padding: 6px;
+  box-sizing: border-box;
+}
+
+form#add-book button {
+  color: #FFF;
+  font-size: 20px;
+  background: #AD1457;
+  border: 0;
+  padding: 6px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+}
+
+#book-details {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 40%;
+  height: 100%;
+  background: #AD1457;
+  padding: 30px;
+  overflow: auto;
+  box-shadow: -2px -3px 5px  rgba(0, 0, 0, 0.3);
+  box-sizing: border-box;
+  color: #FFF;
+}
